--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <script src="./js/main.js"></script>
 </head>
 
 <body>
-    <div class="terminalOutput">                                                              
-    </div>
-    <div class="desktopEnv">
-
-    </div>
+    <img class="logo" src="android-chrome-256x256.png">
+    <h1 class="header">TechWorldInc</h1>
+    <p class="sub-header">Hobbyist Developer</p>
 </body>
 
 </html>
