--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 </head>
 
 <body>
-    <img class="logo" src="android-chrome-256x256.png">
-    <h1 class="header">TechWorldInc</h1>
-    <p class="sub-header">Hobbyist Developer</p>
+    <img class="absolute-center logo" src="android-chrome-256x256.png">
+    <h1 class="absolute-center header">TechWorldInc</h1>
+    <p class="absolute-center sub-header">Hobbyist Developer</p>
+    <span class="absolute-center buttons"><button>About Me</button><button>Projects</button></span>
+    
 </body>
 
 </html>
