--- a/index.html
+++ b/index.html
@@ -16,15 +16,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="./js/main.js"></script>
 </head>
 
 <body>
-    <img class="absolute-center logo" src="android-chrome-256x256.png">
-    <h1 class="absolute-center header">TechWorldInc</h1>
-    <p class="absolute-center sub-header">Hobbyist Developer</p>
-    <span class="absolute-center buttons"><button>About Me</button><button>Projects</button></span>
-    
+    <div class="header-bar">
+        <button>
+            <img src="android-chrome-256x256.png" height="50px">
+        </button>
+        <button class="selected">
+            <span class="material-icons">playlist_add_check</span>
+            <span>PROJECTS</span>
+        </button>
+        <button>
+            <span class="material-icons">info</span>
+            <span>ABOUT</span>
+        </button>
+    </div>
+    <div class="homepage-center-logo">
+        <img class="absolute-center logo" src="android-chrome-256x256.png">
+        <h1 class="absolute-center header">TechWorldInc</h1>
+        <p class="absolute-center sub-header">Hobbyist Developer</p>
+    </div>
 </body>
 
 </html>
