Add darkmode override

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" id="darkModeImport">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -17,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -33,6 +34,7 @@
             <span class="material-icons">info</span>
             <span>ABOUT</span>
         </button>
+        <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode();">
     </div>
     <div class="homepage-center-logo">
         <img class="absolute-center logo" src="android-chrome-256x256.png">
