--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="./js/main.js" defer></script>
+    <script src="./js/darkmode.js" defer></script>
+    <script src="./js/userinterface.js" defer></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         <button>
             <img src="android-chrome-256x256.png" height="50px">
         </button>
-        <button class="selected">
+        <button>
             <span class="material-icons">playlist_add_check</span>
             <span>PROJECTS</span>
         </button>
