--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 <body>
     <div class="header-bar">
-        <button class="header-bar-logo" onclick="switchPage('/page/home.html',this)">
+        <button class="header-bar-logo" onclick="switchPage('page/home.html',this)">
             <img src="android-chrome-256x256.png" height="50px">
         </button>
-        <button onclick="switchPage('/page/projects.html',this);">
+        <button onclick="switchPage('page/projects.html',this);">
             <span class="material-icons">playlist_add_check</span>
             <span>PROJECTS</span>
         </button>
-        <button onclick="switchPage('/page/about.html',this);">
+        <button onclick="switchPage('page/about.html',this);">
             <span class="material-icons">info</span>
             <span>ABOUT</span>
         </button>
