--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="./js/darkmode.js" defer></script>
     <script src="./js/userinterface.js" defer></script>
+    <script src="./js/projects.js" defer></script>
 </head>
 
 <body>
