Update projects page, add ArcOS page

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
         </button>
         <button onclick="switchPage('page/projects.html',this);">
             <span class="material-icons">playlist_add_check</span>
-            <span>PROJECTS</span>
+            <span class="header-bar-button-descr">PROJECTS</span>
         </button>
         <button onclick="switchPage('page/about.html',this);">
             <span class="material-icons">info</span>
-            <span>ABOUT</span>
+            <span class="header-bar-button-descr">ABOUT</span>
+        </button>
+        <button onclick="switchPage('page/arcos.html',this);">
+            <img src="./img/arcos.svg" height="30px" style="vertical-align: middle;">
+            <span class="header-bar-button-descr">ARCOS</span>
         </button>
         <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode();">
     </div>
